--- a/yelp-deployment-lean.yaml
+++ b/yelp-deployment-lean.yaml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/preview/managedOnlineDeployment.schema.json
-name: openai-deployment-lean
+name: openai-deployment-5
 endpoint_name: cli-yelp-endpoint
-model: azureml:yelp-classification-using-openai:4
+model: azureml:yelp-classification-using-openai:5
 instance_type: Standard_F2s_v2
 instance_count: 1
