--- a/1process_data.yaml
+++ b/1process_data.yaml
@@ -1,15 +1,16 @@
-$schema: https://azuremlschemas.azureedge.net/preview/commandJob.schema.json
+$schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
+type: command
 
 environment: 
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
   conda_file: ./conda.yml
 
-code:
-  local_path: ./src/process_data
+code: ./src/process_data
 
 inputs:
-  raw_data: 
-    dataset: azureml:yelp_raw:1
+  raw_data:
+    type: uri_file
+    path: data/1raw/yelp_text_small.csv
   prompt_column: text
   completion_column: stars
   train_test_split: 0.8
@@ -17,19 +18,21 @@ inputs:
 
 outputs:
   train:
+    type: uri_file
     mode: mount
   validation: 
+    type: uri_file
     mode: mount
 
 compute: azureml:cpu-cluster
 
 command: >- 
   python process_data.py 
-    --raw_data ${{inputs.raw_data}} 
-    --prompt_column ${{inputs.prompt_column}}
-    --completion_column ${{inputs.completion_column}}
-    --train_output ${{outputs.train}} 
-    --validation_output ${{outputs.validation}} 
-    --seed ${{inputs.seed}}
-    --train_test_split ${{inputs.train_test_split}}
+  --raw_data ${{inputs.raw_data}} 
+  --prompt_column ${{inputs.prompt_column}}
+  --completion_column ${{inputs.completion_column}}
+  --train_output ${{outputs.train}} 
+  --validation_output ${{outputs.validation}} 
+  --seed ${{inputs.seed}}
+  --train_test_split ${{inputs.train_test_split}}
 
