--- a/2upload_data_component.yaml
+++ b/2upload_data_component.yaml
@@ -1,25 +1,25 @@
-$schema: https://azuremlschemas.azureedge.net/preview/commandComponent.schema.json
+$schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
 
-name: openai-upload-data
+name: aoai_upload_data
 
 environment: 
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
   conda_file: ./conda.yml
 
-code:
-  local_path: ./src/upload_data
+code: ./src/upload_data
 
 inputs:
-  folder_to_upload: 
-    type: path
+  file_to_upload:
+    type: uri_file
 
 outputs:
   upload_metadata:
-    type: path
+    type: uri_folder
 
 command: >- 
   python upload_data.py 
-    --folder_to_upload ${{inputs.folder_to_upload}} 
-    --upload_metadata ${{outputs.upload_metadata}}
+  --file_to_upload ${{inputs.file_to_upload}} 
+  --upload_metadata ${{outputs.upload_metadata}}
+
 
 
