--- a/data/4fine_tune/MLArtifact.yaml
+++ b/data/4fine_tune/MLArtifact.yaml
@@ -1,72 +1,75 @@
-created_at: 1635001331
+created_at: 1668083643
 events:
-- created_at: 1635001332
+- created_at: 1668083645
   level: info
-  message: 'Created fine-tune: ft-mxZrrZ2232eUAZgovUVknrxy'
+  message: Job enqueued. Waiting for jobs ahead to complete.
   object: fine-tune-event
-- created_at: 1635001336
+- created_at: 1668083736
   level: info
-  message: 'Fine-tune enqueued. Queue number: 0'
+  message: Job started.
   object: fine-tune-event
-- created_at: 1635001339
+- created_at: 1668083782
   level: info
-  message: Fine-tune started
+  message: Preprocessing started.
   object: fine-tune-event
-- created_at: 1635001490
+- created_at: 1668090086
   level: info
-  message: Completed epoch 1/1
+  message: Training started.
   object: fine-tune-event
-- created_at: 1635001577
+- created_at: 1668090215
   level: info
-  message: 'Uploaded model: ada:ft-msft-finetuning-2-2021-10-23-15-06-15'
+  message: 'Created results file: file-26d9f2390a28485c8f0dd959d7cd1e73'
   object: fine-tune-event
-- created_at: 1635001580
+- created_at: 1668090913
   level: info
-  message: 'Uploaded result file: file-RRg3o0iVCEBgoc16Y0RNZ5XV'
+  message: Postprocessing started.
   object: fine-tune-event
-- created_at: 1635001581
+- created_at: 1668103545
   level: info
-  message: Fine-tune succeeded
+  message: Job succeeded.
   object: fine-tune-event
-fine_tuned_model: ada:ft-msft-finetuning-2-2021-10-23-15-06-15
+- created_at: 1668090215
+  level: info
+  message: 'Completed results file: file-26d9f2390a28485c8f0dd959d7cd1e73'
+  object: fine-tune-event
+- created_at: 1668103601
+  level: info
+  message: 'Training hours billed: 0.250'
+  object: fine-tune-event
+fine_tuned_model: ada.ft-c4a8c9ed60c847749d07263c29ab887e
 hyperparams:
-  batch_size: 4
-  classification_n_classes: 5
-  compute_classification_metrics: true
-  learning_rate_multiplier: 0.1
-  n_epochs: 1
+  batch_size: 16
+  compute_classification_metrics: false
+  learning_rate_multiplier: 0.2
+  n_epochs: 2
   prompt_loss_weight: 0.1
-  use_packing: true
-id: ft-mxZrrZ2232eUAZgovUVknrxy
+id: ft-c4a8c9ed60c847749d07263c29ab887e
 model: ada
 object: fine-tune
-organization_id: org-hTGGKhbVgQIQFEXlrcWgLHk9
 result_files:
-- bytes: 11660
-  created_at: 1635001578
-  filename: compiled_results.csv
-  id: file-RRg3o0iVCEBgoc16Y0RNZ5XV
+- bytes: 58110
+  created_at: 1668090215
+  filename: results.csv
+  id: file-26d9f2390a28485c8f0dd959d7cd1e73
   object: file
   purpose: fine-tune-results
-  status: processed
-  status_details: null
+  status: succeeded
+  updated_at: 1668103601
 status: succeeded
 training_files:
-- bytes: 6063964
-  created_at: 1634938641
-  filename: ./data/train/yelp.csv.jsonl
-  id: file-80hqHAuaScZ7lQ6AoGSbot3H
+- created_at: 1668083624
+  filename: yelp.csv.jsonl
+  id: file-21ae9bd1b7604f389faa209fd516dbf6
   object: file
   purpose: fine-tune
-  status: processed
-  status_details: null
-updated_at: 1635001581
+  status: succeeded
+  updated_at: 1668083628
+updated_at: 1668103601
 validation_files:
-- bytes: 1516842
-  created_at: 1634938706
-  filename: ./data/validation/yelp.csv.jsonl
-  id: file-ZbFtD0tkHwm8KYqKJvL7lnFe
+- created_at: 1668083583
+  filename: yelp.csv.jsonl
+  id: file-c1f6fa25231e42759291a1d6fcf679f3
   object: file
   purpose: fine-tune
-  status: processed
-  status_details: null
+  status: succeeded
+  updated_at: 1668083586
