--- a/3fine-tune-component.yaml
+++ b/3fine-tune-component.yaml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
 
-name: openai-fine-tune
+name: openai_fine_tune
 
 environment:
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
@@ -41,6 +41,7 @@ inputs:
 
 outputs:
   fine_tune_metadata:
+    type: uri_folder
     
 command: >-
   python fine_tune.py
