--- a/4deploy.yaml
+++ b/4deploy.yaml
@@ -1,25 +1,26 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 
-name: openai-deploy-model
-
 environment:
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
   conda_file: ./conda.yml
 
-code: ./src/save_model
+code: ./src/deploy 
 
 inputs:
   fine_tune:
     type: uri_folder
+    path: ./data/4fine_tune/
+  aoai_endpoint: https://aoai.openai.azure.com/
+  api_version: 2022-06-01-preview
 
 outputs:
-  deploayment:
-    type: path
+  deployment:
+    type: uri_folder
     
 command: >-
   python deploy.py
-  --aoai_resource_name ${{inputs.aoai_resource_name}}
+  --aoai_endpoint ${{inputs.aoai_endpoint}}
   --api_version ${{inputs.api_version}}
-  --fine_tune_metadata ${{inputs.fine_tune_metadata}}
-  --deployment ${{outputs.deployment}}
-
+  --fine_tune_metadata ${{inputs.fine_tune}}
+  --deployment_metadata ${{outputs.deployment}}
+compute: azureml:cpu-cluster
