--- a/4deploy_component.yaml
+++ b/4deploy_component.yaml
@@ -1,23 +1,30 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
 
-name: openai-save-model
+name: openai_deploy_model
 
 environment:
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
   conda_file: ./conda.yml
 
-code: ./src/save_model
+code: ./src/deploy 
 
 inputs:
   fine_tune:
-    type: path
+    type: uri_folder
+  aoai_endpoint:
+    type: string
+  api_version: 
+    type: string
+    default: 2022-06-01-preview
 
 outputs:
-  model:
-    type: path
+  deployment:
+    type: uri_folder
     
 command: >-
-  python save_model.py
-    --fine_tune ${{inputs.fine_tune}}
-    --model ${{outputs.model}}
+  python deploy.py
+  --aoai_endpoint ${{inputs.aoai_endpoint}}
+  --api_version ${{inputs.api_version}}
+  --fine_tune_metadata ${{inputs.fine_tune}}
+  --deployment_metadata ${{outputs.deployment}}
 
