--- a/1process_data.yaml
+++ b/1process_data.yaml
@@ -10,7 +10,7 @@ code: ./src/process_data
 inputs:
   raw_data:
     type: uri_file
-    path: data/1raw/yelp_text_small.csv
+    path: data/1raw/yelp_small.csv
   prompt_column: text
   completion_column: stars
   train_test_split: 0.8
