--- a/7deployment.yaml
+++ b/7deployment.yaml
@@ -1,10 +1,10 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
-name: default
+name: pink
 endpoint_name: aoai-endpoint
 instance_type: Standard_DS4_v2
 instance_count: 1
-model:
+model: 
   type: mlflow_model
-  path: ./data/6model/model
+  path: ./data/6model
 environment_variables:
   OPENAI_API_KEY: <<add_your_secret_here>>
