--- a/conda.yml
+++ b/conda.yml
@@ -6,6 +6,8 @@ dependencies:
   - python=3.8
   - pip
   - pip:
+    - mlflow<2.0.0
     - openai
     - azureml-mlflow
     - azureml-core
+    - scipy
