--- a/data/4fine_tune/MLArtifact.yaml
+++ b/data/4fine_tune/MLArtifact.yaml
@@ -1,48 +1,58 @@
-created_at: 1669303046
+created_at: 1669502168
 events:
-- created_at: 1669303047
+- created_at: 1669502170
   level: info
   message: Job enqueued. Waiting for jobs ahead to complete.
   object: fine-tune-event
-- created_at: 1669303142
+- created_at: 1669502259
   level: info
   message: Job started.
   object: fine-tune-event
-- created_at: 1669303198
-  level: info
-  message: Preprocessing started.
-  object: fine-tune-event
-- created_at: 1669303431
+- created_at: 1669502312
   level: info
   message: Training started.
   object: fine-tune-event
-- created_at: 1669303553
+- created_at: 1669502433
   level: info
-  message: 'Created results file: file-7375b5e61fd640f89a0d709f93fe6840'
+  message: 'Created results file: file-7447b5a8318346b185782c9c0b52c7c0'
   object: fine-tune-event
-- created_at: 1669303726
+- created_at: 1669503012
   level: info
   message: Postprocessing started.
   object: fine-tune-event
+- created_at: 1669503680
+  level: info
+  message: Job succeeded.
+  object: fine-tune-event
+- created_at: 1669502433
+  level: info
+  message: 'Completed results file: file-7447b5a8318346b185782c9c0b52c7c0'
+  object: fine-tune-event
+- created_at: 1669503723
+  level: info
+  message: 'Training hours billed: 0.250'
+  object: fine-tune-event
+fine_tuned_model: ada.ft-2bc72fa8850c4d738f156795134e34d9
 hyperparams:
-  batch_size: 1
-  compute_classification_metrics: false
-  learning_rate_multiplier: 0.2
-  n_epochs: 2
+  batch_size: 4
+  classification_n_classes: 5
+  compute_classification_metrics: true
+  learning_rate_multiplier: 0.1
+  n_epochs: 20
   prompt_loss_weight: 0.1
-id: ft-e19ea0fbbf7a486083e6ef3491ff230c
+id: ft-2bc72fa8850c4d738f156795134e34d9
 model: ada
 object: fine-tune
 result_files:
-- bytes: 2836
-  created_at: 1669303553
+- bytes: 7824
+  created_at: 1669502433
   filename: results.csv
-  id: file-7375b5e61fd640f89a0d709f93fe6840
+  id: file-7447b5a8318346b185782c9c0b52c7c0
   object: file
   purpose: fine-tune-results
-  status: running
-  updated_at: 1669304203
-status: running
+  status: succeeded
+  updated_at: 1669503723
+status: succeeded
 training_files:
 - created_at: 1668094594
   filename: yelp_train.jsonl
@@ -51,7 +61,7 @@ training_files:
   purpose: fine-tune
   status: succeeded
   updated_at: 1668094599
-updated_at: 1669304203
+updated_at: 1669503723
 validation_files:
 - created_at: 1669302990
   filename: yelp_validation.jsonl.jsonl
