--- a/src/deploy/deploy_component.yaml
+++ b/src/deploy/deploy_component.yaml
@@ -4,9 +4,9 @@ name: openai_deploy_model
 
 environment:
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
-  conda_file: ./conda.yml
+  conda_file: ../../conda.yml
 
-code: ./src/deploy 
+code: . 
 
 inputs:
   fine_tune:
