--- a/src/upload_data/upload_data.yaml
+++ b/src/upload_data/upload_data.yaml
@@ -1,25 +1,24 @@
-$schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
-
-name: aoai_upload_data
+$schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 
 environment: 
   image: mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04
-  conda_file: ./conda.yml
+  conda_file: ../../conda.yml
 
-code: ./src/upload_data
+code: .
 
 inputs:
   file_to_upload:
     type: uri_file
+    path: ../../data/2train/yelp_train.jsonl
 
 outputs:
   upload_metadata:
-    type: uri_folder
+
+compute: azureml:cpu-cluster
 
 command: >- 
   python upload_data.py 
   --file_to_upload ${{inputs.file_to_upload}} 
   --upload_metadata ${{outputs.upload_metadata}}
-
 
 
