--- a/data/5deployment/MLArtifact.yaml
+++ b/data/5deployment/MLArtifact.yaml
@@ -1,7 +1,7 @@
 created_at: 1670855590
 endpoint: https://aoai.openai.azure.com/
-id: deployment-e1bb35d029da43f88d0ef118391ffa0b
-model: babbage.ft-f042c2b580e948bebd44bb16634452b8
+id: best-model
+model: babbage.ft-0e40b0ef930246ebb6c1f277d802407b
 object: deployment
 owner: organization-owner
 scale_settings:
