--- a/batch_score_pipeline.yaml
+++ b/batch_score_pipeline.yaml
@@ -12,10 +12,10 @@ inputs:
   top: 3  
   rag_meta_prompt: 
     type: uri_file
-    path: azureml:prompt-rag-brief-mime:1
+    path: data/amldocs/prompts/rag_brief.mime
   groundedness_meta_prompt: 
     type: uri_file
-    path: azureml:prompt-groundedness-default-md:1
+    path: data/amldocs/prompts/groundedness_default.md
 
 outputs:
   rag_scores:
