--- a/data/6model/conda.yaml
+++ b/data/6model/conda.yaml
@@ -2,11 +2,12 @@ channels:
 - defaults
 - conda-forge
 dependencies:
-- python=3.8
+- python=3.10
 - pip
 - pip:
-  - mlflow<2.0.0
+  - mlflow
   - openai
   - azureml-mlflow
   - azureml-core
+  - python-dotenv
 name: openai
