--- a/data/6stats/metrics.yaml
+++ b/data/6stats/metrics.yaml
@@ -1,10 +1,10 @@
-deployment_id: best-model
+deployment_id: text-babbage-001
 frequency_penalty: 0
 max_tokens: 1
-model_id: babbage.ft-0e40b0ef930246ebb6c1f277d802407b
+model_id: text-babbage-001
 temperature: 0
-test_accuracy: 0.6146616541353384
-test_f1: 0.6041612907281713
-test_precision: 0.6290765430113058
-test_recall: 0.6146616541353384
+test_accuracy: 0.0
+test_f1: 0.0
+test_precision: 0.0
+test_recall: 0.0
 top_p: 0
